--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -29,3 +29,17 @@
   display: flex;
   flex-direction: row;
 }
+
+.user-form-container {
+  flex-flow: row wrap;
+}
+.user-form-item {
+  justify-content: center;
+}
+input {
+  width: 200px;
+  border: solid black;
+  border-width: thin;
+  border-radius: 5;
+  box-sizing: border-box;
+}
